--- a/index.css
+++ b/index.css
@@ -27,7 +27,7 @@
     margin: 5px;
     padding: 5px ;
     width: 200px;
-    
+       
 }
 
 .res-card:hover{
@@ -62,3 +62,8 @@
     height: 400px;
     background-color: #f0f0f0;
 }
+.login{
+    padding: 0 20px;
+    cursor: pointer;
+}
+
